--- a/package.json
+++ b/package.json
@@ -1,13 +1,32 @@
 {
-    "name": "ast_project_2017",
-    "description": "simple project for ECE AST class",
-    "version": "0.0.1",
-    "scripts": {
-        "start": "./bin/start.sh",
-        "test": "./bin/test.sh tests/*"
-    },
-    "devDependencies": {
-        "mocha": "^4.0.1",
-        "should": "^13.1.1"
-    }
+  "name": "ast_project_2017",
+  "description": "simple project for ECE AST class",
+  "version": "0.0.1",
+  "scripts": {
+    "start": "./bin/start.sh",
+    "test": "./bin/test.sh tests/*"
+  },
+  "devDependencies": {
+    "mocha": "^4.0.1",
+    "should": "^13.1.1"
+  },
+  "dependencies": {
+    "coffee-script": "^1.12.7",
+    "pug": "^2.0.0-rc.4",
+    "stylus": "^0.54.5"
+  },
+  "main": "index.js",
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Riemannn/Asynchronous_server_technologies.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Riemannn/Asynchronous_server_technologies/issues"
+  },
+  "homepage": "https://github.com/Riemannn/Asynchronous_server_technologies#readme"
 }
