--- a/package.json
+++ b/package.json
@@ -8,10 +8,18 @@
   },
   "devDependencies": {
     "mocha": "^4.0.1",
+    "popper": "^1.0.0",
     "should": "^13.1.1"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-beta.2",
     "coffee-script": "^1.12.7",
+    "express": "^4.16.2",
+    "jquery": "^3.2.1",
+    "jstransformer-coffee-script": "^1.1.0",
+    "level": "^2.0.1",
+    "level-ws": "^0.1.0",
+    "popper.js": "^1.12.7",
     "pug": "^2.0.0-rc.4",
     "stylus": "^0.54.5"
   },
